--- a/Frontend/src/components/Courses/AllCourses/AllCourses.scss
+++ b/Frontend/src/components/Courses/AllCourses/AllCourses.scss
@@ -3,3 +3,10 @@
     max-width: 85%;
     margin-left: 7%;
 }
+
+.add-button {
+    display: flex;
+    justify-content: center;
+
+    padding-top: 10px;
+}
